[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/basement/cauldron.png" type="Texture" id=1]
[ext_resource path="res://Basement/Cauldron.gd" type="Script" id=2]
[ext_resource path="res://Basement/rotate_mask.shader" type="Shader" id=3]
[ext_resource path="res://assets/basement/cauldron_liquid_mask.png" type="Texture" id=4]
[ext_resource path="res://assets/basement/cauldron_liquid.png" type="Texture" id=5]
[ext_resource path="res://Basement/mirage.shader" type="Shader" id=6]
[ext_resource path="res://assets/fonts/Courgette/Courgette-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/mask_texture = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 6 )
shader_param/frequency = 40.0
shader_param/depth = 0.005
shader_param/mask_texture = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 28
outline_size = 1
outline_color = Color( 0.564706, 0.447059, 0.101961, 1 )
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=4]
length = 4.0
loop = true

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 24, 24 )

[node name="Cauldron" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Liquid" type="TextureRect" parent="."]
modulate = Color( 0.498039, 0.203922, 0.537255, 1 )
show_behind_parent = true
material = SubResource( 1 )
margin_left = -256.0
margin_top = -256.0
margin_right = 256.0
margin_bottom = 256.0
rect_rotation = 360.0
rect_pivot_offset = Vector2( 256, 256 )
texture = ExtResource( 5 )

[node name="Filter" type="TextureRect" parent="."]
show_behind_parent = true
material = SubResource( 3 )
margin_left = -256.0
margin_top = -256.0
margin_right = 256.0
margin_bottom = 256.0
texture = ExtResource( 4 )

[node name="Clear" type="TextureRect" parent="."]
visible = false
show_behind_parent = true
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = 24.0
expand = true
stretch_mode = 4

[node name="LastPotion" type="Sprite" parent="."]
show_behind_parent = true

[node name="MakeAnotherLabel" type="Label" parent="."]
visible = false
show_behind_parent = true
margin_left = -158.0
margin_top = -100.0
margin_right = 159.0
margin_bottom = -15.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.780392, 0.639216, 0.231373, 1 )
text = "Click to brew another
Potion of Hydration"
align = 1

[node name="ClearLabel" type="Label" parent="."]
visible = false
show_behind_parent = true
margin_left = -158.0
margin_top = -100.0
margin_right = 159.0
margin_bottom = -15.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.780392, 0.639216, 0.231373, 1 )
text = "Clear cauldron and
get ingredients back"
align = 1

[node name="Ingredients" type="Node2D" parent="."]
rotation = 4.46638e-06
z_index = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Liquid"
anims/Liquid = SubResource( 4 )

[node name="Area" type="Area2D" parent="."]
position = Vector2( -6.10352e-05, -3.05176e-05 )
scale = Vector2( 0.333333, 0.333333 )
collision_layer = 2
collision_mask = 0

[node name="Collision" type="CollisionPolygon2D" parent="Area"]
visible = false
scale = Vector2( 1, 1 )
polygon = PoolVector2Array( -119.51, -667.996, 113.731, -672.756, 280.332, -634.676, 399.333, -568.035, 513.573, -472.835, 604.014, -349.074, 665.895, -163.433, 675.415, 65.0483, 637.334, 303.05, 532.614, 464.891, 413.613, 583.891, 280.332, 641.012, 123.251, 702.892, -109.99, 698.132, -324.192, 621.972, -481.272, 522.011, -605.033, 350.65, -681.194, 93.6085, -666.914, -187.233, -543.153, -439.515, -347.992, -591.836 )

[node name="MakeAnotherArea" type="Area2D" parent="."]
visible = false
monitoring = false
monitorable = false
collision_layer = 4

[node name="Collision" type="CollisionShape2D" parent="MakeAnotherArea"]
visible = false
shape = SubResource( 8 )

[node name="ClearArea" type="Area2D" parent="."]
visible = false
monitoring = false
monitorable = false
collision_layer = 4

[node name="Collision" type="CollisionShape2D" parent="ClearArea"]
visible = false
shape = SubResource( 8 )
